Jan 29 2007  devel  Added Hildon GPS support
                    Fixed huge bug in IE tag parsing that ignored large
                     beacon frames, thanks to Duane Compton
Jan 26 2007  devel  Disabled probenojoin by default in config, it's sort of a
                     useless alert which makes a lot of noise.
                    More capture source control changes to try to solve
                     problems capturing reliably on Nokia 8x0 devices
Dec 19 2007  devel  Nokia-specific changes
Dec 17 2007  devel  Added kernel version detection for Darwin to accept enX
                     on >= Leopard, VERY NEW LIBPCAP required.
Dec 15 2007  devel  Fixed admtek fatal error on ssid zero (errors now ignored)
Dec 11 2007  devel  Fixed a problem where the first connection to the server
                     would be ignored.
Dec 10 2007  devel  Merged a patchset from Pavol Rusnak and SUSE including
                     some ncurses cleanups, format string quirks with size_t,
                     and header massaging
Nov 20 2007  devel  Fixed 'make install' and 'make suidinstall' not dep'ing
                     'kismet' binary
Nov 06 2007  devel  Added --disable-dbus to configure for environments
                     which don't detect properly
Oct 06 2007 2007-10 Long time in coming, Kismet-2007-10-R1
                     Basic 802.11N support (IE tag parsing)
                     Airpcap 11n header support (PPI)
                     DBUS support for controlling NetworkManager
                     Significant memory reduction in server/client
                     Significantly faster client code
                     D80211 device support (iwl, others)
                     Darwin (OSX) native support
                     Revamped madwifi-ng support
                     GPSD anti-jitter handling
                     Innumerable bug fixes (encryption detection, device
                     handling, client crashes, etc)
